// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[<Typography />] matches to snapshot 1`] = `
<Typography__StyledTypography
  as="p"
  variant="body"
/>
`;

exports[`[<Typography />] when pass variant prop should equals the body 1`] = `
<Typography__StyledTypography
  as="p"
  variant="body"
>
  body
</Typography__StyledTypography>
`;

exports[`[<Typography />] when pass variant prop should equals the legend 1`] = `
<Typography__StyledTypography
  as="p"
  variant="legend"
>
  legend
</Typography__StyledTypography>
`;

exports[`[<Typography />] when pass variant prop should equals the subtitle 1`] = `
<Typography__StyledTypography
  as="h3"
  variant="subtitle"
>
  subtitle
</Typography__StyledTypography>
`;

exports[`[<Typography />] when pass variant prop should equals the subtitle2 1`] = `
<Typography__StyledTypography
  as="h4"
  variant="subtitle2"
>
  subtitle2
</Typography__StyledTypography>
`;

exports[`[<Typography />] when pass variant prop should equals the title 1`] = `
<Typography__StyledTypography
  as="h1"
  variant="title"
>
  title
</Typography__StyledTypography>
`;

exports[`[<Typography />] when pass variant prop should equals the title2 1`] = `
<Typography__StyledTypography
  as="h2"
  variant="title2"
>
  title2
</Typography__StyledTypography>
`;
